[package]
name = "bolt-web"
version = "0.2.1"
edition = "2024"
authors = ["sumeeth sumeethveeramallu2001@gmail.com"]
description = "⚡ A high-performance, minimalist web framework for Rust, inspired by Express.js and Gin."
license = "MIT"
repository = "https://github.com/sumeeth05/boltweb"
homepage = "https://bolt-web.com"
documentation = "https://bolt-web.com"
readme = "README.md"
keywords = ["bolt-web", "http", "web", "server"]
categories = [
    "web-programming",
    "web-programming::http-server",
    "web-programming::http-client",
]

[dependencies]
radixmap = "0.2.4"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
url = "2"
async-trait = "0.1.89"
time = { version = "0.3", features = ["formatting"] }
paste = "1.0.15"
hyper-tls = "0.6.0"
tokio-native-tls = "0.3.1"
multer = "3.1.0"
mime = "0.3.17"
futures-util = { version = "0.3" }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
bolt-web-macro = "0.1.1"
