[package]
name = "bolt-web"
version = "3.0.0"
edition = "2024"
authors = ["sumeeth sumeethveeramallu2001@gmail.com"]
description = "⚡ A high-performance, minimalist web framework for Rust, inspired by Express.js and Gin."
license = "MIT"
repository = "https://github.com/sumeeth05/boltweb"
homepage = "https://bolt-web.com"
documentation = "https://bolt-web.com"
readme = "README.md"
keywords = ["bolt-web", "http", "web", "server"]
categories = [
    "web-programming",
    "web-programming::http-server",
    "web-programming::http-client",
]

[dependencies]
radixmap = "0.2.4"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
url = "2"
async-trait = "0.1.89"
time = { version = "0.3", features = ["formatting"] }
paste = "1.0.15"
hyper-tls = "0.6.0"
multer = "3.1.0"
mime = "0.3.17"
futures-util = { version = "0.3" }
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
bolt-web-macro = "0.1.4"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.4"
serde_urlencoded = "0.7.1"
pin-project-lite = "0.2"
cookie = { version = "0.18", features = ["percent-encode"] }
